--- a/frontend/index.html
+++ b/frontend/index.html
@@ -89,17 +89,17 @@
       ></div>
       <div class="map-overlay absolute inset-0"></div>
 
-      <div class="relative z-10 text-center px-4 max-w-4xl">
+      <div class="relative z-10 text-center px-4 max-w-7xl mx-auto">
         <h1
-          class="text-4xl sm:text-5xl md:text-7xl font-light mb-6 tracking-tight"
+          class="hero-title hero-massive font-light mb-12 tracking-tight leading-[0.9]"
         >
-          <span class="block mb-2">Every</span>
-          <span class="font-medium"
+          <span class="block text-white/90 mb-8 animate-fade-in">Every</span>
+          <span class="block font-bold bg-gradient-to-r from-white via-blue-100 to-white bg-clip-text text-transparent animate-fade-in-delay"
             >Second Counts</span
           >
         </h1>
         <p
-          class="text-lg sm:text-xl md:text-2xl text-[#D3D3D3] mb-12 max-w-2xl mx-auto"
+          class="hero-subtext text-gray-300 mb-14 max-w-5xl mx-auto leading-relaxed font-light"
         >
           Connect emergency responders with those in need through real-time
           coordination
